# cctools-port

./: .gitignore
cctools/: Makefile.in  configure  configure.ac
cctools/ar/: Makefile.in
cctools/as/: Makefile.in
cctools/as/arm/: Makefile.in
cctools/as/i386/: Makefile.in
cctools/as/ppc/: Makefile.in
cctools/as/ppc64/: Makefile.in
cctools/as/x86_64/: Makefile.in
cctools/efitools/: Makefile.in
cctools/include/mach/: machine.h
cctools/ld64/: Makefile.in
cctools/ld64-ppc/: Makefile.in
cctools/ld64-ppc/doc/man/: Makefile.in
cctools/ld64-ppc/src/: Makefile.am  Makefile.in
cctools/ld64-ppc/src/3rd/: Makefile.in
cctools/ld64-ppc/src/3rd/BlocksRuntime/: Makefile.in  libBlocksRuntime.la
cctools/ld64-ppc/src/abstraction/: MachOFileAbstraction.hpp
cctools/ld64-ppc/src/ld/: InputFiles.cpp  InputFiles.h  Makefile.am  Makefile.in  Options.cpp  OutputFile.cpp  OutputFile.h  Resolver.cpp  Resolver.h  SymbolTable.cpp  SymbolTable.h  ld.cpp  ld.hpp
cctools/ld64-ppc/src/ld/parsers/: Makefile.am  Makefile.in  lto_file.cpp  macho_relocatable_file.cpp
cctools/ld64-ppc/src/ld/parsers/libunwind/: AddressSpace.hpp
cctools/ld64-ppc/src/ld/passes/: Makefile.am  Makefile.in  branch_island.cpp  dtrace_dof.cpp  order_file.cpp
cctools/ld64-ppc/src/other/: Makefile.am  Makefile.in  ObjectDump.cpp  dyldinfo.cpp  machochecker.cpp  rebase.cpp
cctools/ld64/doc/man/: Makefile.in
cctools/ld64/src/: Makefile.in  configure.h
cctools/ld64/src/3rd/: Makefile.in
cctools/ld64/src/3rd/BlocksRuntime/: Makefile.in
cctools/ld64/src/abstraction/: MachOFileAbstraction.hpp
cctools/ld64/src/ld/: HeaderAndLoadCommands.hpp  InputFiles.cpp  LinkEdit.hpp  LinkEditClassic.hpp  Makefile.in  Options.cpp  OutputFile.cpp  OutputFile.h  PlatformSupport.cpp  Resolver.cpp  Resolver.h  ld.hpp
cctools/ld64/src/ld/parsers/: Makefile.in  archive_file.cpp  macho_dylib_file.cpp  macho_relocatable_file.cpp
cctools/ld64/src/ld/passes/: Makefile.am  Makefile.in  branch_island.cpp  compact_unwind.cpp  dtrace_dof.cpp  objc.cpp
cctools/ld64/src/ld/passes/stubs/: stubs.cpp
cctools/ld64/src/other/: Makefile.in  ObjectDump.cpp  dyldinfo.cpp  machochecker.cpp  unwinddump.cpp
cctools/libmacho/: Makefile.in
cctools/libobjc2/: Makefile.in
cctools/libstuff/: Makefile.in  diagnostics.c
cctools/man/: Makefile.in
cctools/misc/: Makefile.in
cctools/otool/: Makefile.in
